# rustdoc-text

./: CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md
.github/workflows/: binaries.yml
.just/: cargo.just  release.just
src/: lib.rs  main.rs
