[package]
name = "rustdoc-text"
version = "0.2.0"
edition = "2021"
description = "A lightweight library and CLI tool to view Rust documentation as plain text"
license = "MIT"
repository = "https://github.com/lmmx/rustdoc-text"
readme = "README.md"
keywords = ["rustdoc", "documentation", "cli", "text"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "rustdoc_text"
path = "src/lib.rs"

[[bin]]
name = "rustdoc-text"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
scraper = "0.17"
reqwest = { version = "0.11", features = ["blocking"] }
anyhow = "1.0"
dirs = "5.0"
tempfile = "3.8"
htmd = "0.1.6"

[profile.dev]
opt-level = 0
lto = false
codegen-units = 256
panic = "abort"
debug = false
strip = "debuginfo"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true