[package]
categories = ["command-line-utilities", "development-tools"]
description = "A lightweight library and CLI tool to view Rust documentation as plain text"
edition = "2021"
keywords = ["cli", "documentation", "rustdoc", "text"]
license = "MIT"
name = "rustdoc-text"
readme = "README.md"
repository = "https://github.com/lmmx/rustdoc-text"
version = "0.3.2"

[package.metadata.binstall]
pkg-fmt = "tgz"
pkg-url = "https://github.com/lmmx/rustdoc-text/releases/download/rustdoc-text-v{ version }/rustdoc-text-{ target }-v{ version }.tar.gz"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"
pkg-url = "https://github.com/lmmx/rustdoc-text/releases/download/rustdoc-text-v{ version }/rustdoc-text-aarch64-pc-windows-msvc-v{ version }.zip"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
pkg-url = "https://github.com/lmmx/rustdoc-text/releases/download/rustdoc-text-v{ version }/rustdoc-text-x86_64-pc-windows-msvc-v{ version }.zip"

[lib]
name = "rustdoc_text"
path = "src/lib.rs"

[[bin]]
name = "rustdoc-text"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { features = ["derive"], version = "4.4" }
htmd = "0.1.6"
reqwest = { features = ["blocking"], version = "0.11" }
scraper = "0.17"
tempfile = "3.8"

[profile.dev]
codegen-units = 256
debug = false
lto = false
opt-level = 0
panic = "abort"
strip = "debuginfo"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
